--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Vue App</title>
-    </head>
-    <body>
-        <div id="app"></div>
-        <!-- built files will be auto injected -->
-    </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Vue App</title><link href=/static/css/app.d7733b43ec008890198ff5223b3e88b2.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.73aa37205cdd4086a0ca.js></script><script type=text/javascript src=/static/js/vendor.c8b77de96e9ea7f9ff6b.js></script><script type=text/javascript src=/static/js/app.bf14a5fd8b16f5f3b193.js></script></body></html>
